--- a/MemoryGame/Properties/Resources.resx
+++ b/MemoryGame/Properties/Resources.resx
@@ -157,6 +157,9 @@
   <data name="SwordWieldingLotrGuy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\LOTR\SwordWieldingLotrGuy.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="testsound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sounds\testsound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="tornado" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\Animals\tornado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
