--- a/MemoryGame/Properties/Resources.resx
+++ b/MemoryGame/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="banana" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\Animals\banana.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bangerbeat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sounds\music\bangerbeat.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="book" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\Animals\book.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,6 +136,9 @@
   <data name="car" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\Animals\car.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="correct" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sounds\soundeffects\correct.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Ent" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\LOTR\Ent.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -141,6 +147,9 @@
   </data>
   <data name="Gandalf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\LOTR\Gandalf.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lotr" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sounds\music\lotr.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="monkey" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\Animals\monkey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -156,9 +165,6 @@
   </data>
   <data name="SwordWieldingLotrGuy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\LOTR\SwordWieldingLotrGuy.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="testsound" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\sounds\testsound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="tornado" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\Animals\tornado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
